# Zal-Core

./: .gitmodules  CMakeLists.txt  analytics.toml  generate_all_forms.toml
GenerateAllForms/: GenerateAllForms.cpp
MainLib/: Analysis.cpp  Analysis.h  Analytics.cpp  Analytics.h  Analyzer.cpp  Analyzer_Helpers.h  Dictionary.cpp  Dictionary.h  Endings.cpp  Endings.h  ErrorComWrapper.h  FormBuilderAdjComparative.cpp  FormBuilderAdjComparative.h  FormBuilderAdjLong.cpp  FormBuilderAdjLong.h  FormBuilderAdjShort.cpp  FormBuilderAdjShort.h  FormBuilderAspectPair.cpp  FormBuilderAspectPair.h  FormBuilderBase.cpp  FormBuilderBase.h  FormBuilderBaseConj.cpp  FormBuilderBaseConj.h  FormBuilderBaseDecl.cpp  FormBuilderBaseDecl.h  FormBuilderNouns.cpp  FormBuilderNouns.h  FormBuilderPronounAdj.cpp  FormBuilderPronounAdj.h  FormBuilderVerbImpv.cpp  FormBuilderVerbImpv.h  FormBuilderVerbNonFinite.cpp  FormBuilderVerbNonFinite.h  FormBuilderVerbPast.cpp  FormBuilderVerbPast.h  FormBuilderVerbPers.cpp  FormBuilderVerbPers.h  GenerateAllForms.cpp  IAnalytics.h  IDictionary.h  (+35 more)
MainLibCTypes/: ZalPythonItf.cpp
RunAnalytics/: RunAnalytics.cpp  RunAnalytics.h
RunMetrics/: RunMetrics.cpp  RunMetrics.h
RunPhonotactics/: RunPhonotactics.cpp  RunPhonotactics.h
